# aDeepLearning

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  draft.cpp
Tests/: CMakeLists.txt
Tests/binary_operators_test/: test_add.cpp  test_divide.cpp  test_dot.cpp  test_mul.cpp  test_sigmoid_derivative.cpp  test_softmax_derivative.cpp  test_subtraction.cpp  test_tanh_derivative.cpp
Tests/composed_layer/: test_compose_kernel.cpp  test_linear_layer.cpp  test_single_layer.cpp
Tests/cost_layer_test/: test_negative_log_likelihood_layer.cpp
Tests/datatype_test/: test_arr.cpp  test_batch_duplicate.cpp  test_matrix.cpp  test_others.cpp
Tests/elementary_layer/: test_activate.cpp  test_bias.cpp  test_filler.cpp  test_oper_layer.cpp  test_weight_layer.cpp
Tests/unary_operators_test/: test_abs.cpp  test_collapse.cpp  test_sigmoid.cpp  test_sign.cpp  test_softmax.cpp  test_tanh.cpp  test_transpose.cpp
Tests/utils_test/: acc_policy.h  test_utils.cpp
chapter6/: CMakeLists.txt  chapter6.cpp  chapter6_1.cpp  chapter6_2.cpp
chapter7/: CMakeLists.txt  chapter7.cpp  chapter7_2.cpp
chapter8/: CMakeLists.txt  chapter8.cpp
data/: array.hpp  batch.hpp  scalar.hpp
eval/: eval_pool.hpp
examples/: CMakeLists.txt  ml_linear_regression.cpp  ml_logistic_regression.cpp  nn_mnist_training.cpp  nn_single_layer_backward.cpp  nn_two_layer_inference.cpp  nn_xor_training.cpp
layers/: interface_fun.hpp  layer_io.hpp
layers/compose/: compose_utils.hpp  linear_layer.hpp  single_layer.hpp
layers/elementary/: mul_layer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  tanh_layer.hpp
layers/fillers/: fill_with_dist.hpp  gaussian_filler.hpp  var_scale_filler.hpp
layers/policies/: init_policy.hpp  input_policy.hpp
metann/data/: allocator.hpp  array.hpp  batch.hpp  data.hpp  data_category.hpp  data_copy.hpp  data_device.hpp  duplicate.hpp  matrix.hpp  mnist.hpp  scalar.hpp
metann/eval/: eval_pool.hpp  extended.hpp  facilities.hpp
metann/layers/: dynamic_data.hpp  grad_collector.hpp  initializer.hpp  interface_fun.hpp  layer_helper.hpp  layer_io.hpp
metann/layers/compose/: check_struct.hpp  compose_core.hpp  compose_utils.hpp  containers.hpp  linear_layer.hpp  single_layer.hpp  structure.hpp
metann/layers/cost/: negative_log_likelihood_layer.hpp
metann/layers/elementary/: abs_layer.hpp  add_layer.hpp  bias_layer.hpp  mul_layer.hpp  sigmoid_layer.hpp  softmax_layer.hpp  tanh_layer.hpp  weight_layer.hpp
metann/layers/fillers/: constant_filler.hpp  fill_with_dist.hpp  gaussian_filler.hpp  uniform_filler.hpp  var_scale_filler.hpp
metann/layers/optimizers/: sgd_optimizer.hpp
metann/layers/policies/: init_policy.hpp  input_policy.hpp  operand_policy.hpp  single_layer_policy.hpp  update_policy.hpp
metann/operators/: binary_operators.hpp  operator_category.hpp  operator_helper.hpp  ternary_operators.hpp  unary_operators.hpp
metann/policy/: policy.hpp
metann/utils/: type_traits.hpp  vartype_dict.hpp
operators/: binary_operators.hpp  operator_category.hpp
policy/: policy.hpp
utils/: type_traits.hpp  vartype_dict.hpp
