add_executable(chapter7 chapter7.cpp
        ../layers/compose/structure.hpp
        ../layers/compose/containers.hpp
        ../layers/compose/check_struct.hpp
        ../layers/compose/compose_core.hpp
        ../layers/compose/compose_utils.hpp
        ../layers/interface_fun.hpp
        ../layers/compose/linear_layer.hpp
        ../layers/compose/single_layer.hpp
        ../layers/policies/single_layer_policy.hpp)
add_executable(chapter7_2 chapter7_2.cpp)