add_executable(chapter8 "chapter8.cpp"
        ../eval/facilities.hpp
        ../eval/extended.hpp
        ../data/data_copy.hpp
        ../layers/fillers/constant_filler.hpp
        ../layers/fillers/uniform_filler.hpp
        ../layers/fillers/fill_with_dist.hpp
        ../layers/fillers/gaussian_filler.hpp
        ../eval/eval_pool.hpp)
